--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main">
       <nav>
-        <span><img src="/assets/logo.svg" alt="" /></span>
+        <span><img src="assets/logo.svg" alt="" /></span>
         <div>
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
